# nextpilot-flight-review

./: .gitignore  CMakeLists.txt  README.md  nextpilot-flight-review.code-workspace  nextpilot-flight-review.mp  nextpilot-flight-review.pro
cmake/: clang-format.cmake  helper.cmake  kconfig.cmake
src/common/: common.pri  data_loader_base.hpp  data_ploter_base.hpp  data_source_base.hpp  load_svg.hpp
src/core/: DataSourceBase.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/main/: main.cpp  main.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  project_explorer.cpp  project_explorer.hpp  resources.qrc
src/main/plot/: docked_axes.cpp  docked_axes.hpp  docked_figure.cpp  docked_figure.hpp  plot_axes.cpp  plot_axes.hpp  plot_figure.cpp  plot_figure.hpp  tabbed_plot_widget.cpp  tabbed_plot_widget.hpp
src/plugin/: data_loader_ulog.cpp  plugin.pro
src/plugin/data_loader_csv/: data_loader_csv.cpp  data_loader_csv.hpp  data_loader_csv.pro  data_loader_csv.ui  data_loader_csv_preview.cpp  data_loader_csv_preview.hpp  data_loader_csv_preview.ui
src/plugin/data_loader_ulog/: data_loader_ulog.cpp  data_loader_ulog.hpp  data_loader_ulog.pro
src/plugin/dataloader_ulog/: data_loader_ulog.cpp  data_loader_ulog.hpp
